# planet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  asterriod.cpp  getReady.txt  readme.md
dependency/GLFW3.3.10/: glfw3.lib
dependency/assimp/: assimp-vc143-mt.lib
dependency/assimp/assimp/: revision.h
dependency/glad4.6/include/glad/: glad.h
dependency/glad4.6/src/: glad.c
dependency/stb/: stb_image.h
glsl/: asterriodfragmentshader.glsl  asterriodvertexshader.glsl  plannetfragmentshader.glsl  plannetvertexshader.glsl
headers/: ShaderClass.cpp  Timer.h  camera.h  feedbackFunctions.h  model.h  precompile.cpp  precompile.h
include/: CMakeLists.txt  ShaderClass.cpp  ShaderClass.h  Timer.h  camera.cpp  camera.h  cmake_install.cmake  dependencies.vcxproj  dependencies.vcxproj.filters  feedbackFunctions.h  model.cpp  model.h
include/dependencies.dir/Debug/dependencies.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  dependencies.lastbuildstate
pch/: CMakeLists.txt  precompile.h
src/: asterriod.cpp  camera.cpp
